# zj_new_py_app2

model-demo/: .env  main.py  pyproject.toml
model-demo/datasets/: __init__.py
model-demo/datasets/milvus_rag/: config.yaml  data_utils.py  main.py  rag_system.py
model-demo/examples/: __init__.py  milvus_base.py  model_base.py  model_neural_net.py  py_base.py  torch_base.py  torch_model.py
model-demo/models/: __init__.py
model-demo/models/dl_model_01/: __init__.py  cifar10.py  mnist.py
model-demo/models/dl_model_02/: cnn_basic.py  mlp_basic.py  mnist_loader.py
model-demo/models/llm_model_01/: main.py  model.py
model-demo/models/ml_model/: __init__.py  logistic.py
model-demo/vec_search/: __init__.py
model-demo/vec_search/rag_search_01/: __init__.py  chunker.py  main.py  store.py
model-demo/vec_search/rag_search_02/: __init__.py  chunker.py  embedding.py  main.py  reranker.py  scanner.py  store.py
py-demo/: .env  Makefile  main.py  pyproject.toml
py-demo/apps/: main_cli.py  mts_batch_op.py
py-demo/examples/: bs_parser.py  io_base.py  io_pdf.py  py_async.py  py_base.py  py_jsonpath.py  py_struct.py  py_tools.py  web_auto.py
py-demo/tests/: __init__.py  test_io_utils.py  test_os_utils.py
py-demo/utils/: __init__.py  base.py  decorator.py  html_utils.py  http_utils.py  io_utils.py  os_utils.py
py-pkg-demo/: .gitignore  Makefile  README.md  pyproject.toml
py-pkg-demo/src/py_pkg_demo/: __init__.py  __main__.py  cli.py  io_file.py
py-pkg-demo/tests/: __init__.py  test_cli.py  test_io_util.py
uiauto-demo/: .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini
uiauto-demo/tools/: __init__.py  case_decorator.py  constant.py  pytest_scanner.py  ui_decorator.py  web_helper.py  webui_helper.py
uiauto-demo/uimodel/: __init__.py  asserts.py  ui_locator.py  ui_page.py
uiauto-demo/uitests/: __init__.py
uiauto-demo/uitests/cases/: __init__.py  conftest.py  test_hello_world.py  (+1 more)
uiauto-demo/utils/: __init__.py  logger.py
(+39 files in other folders)
