[project]
name = "model-demo"
version = "0.1.0"
description = "My AI model learning demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "milvus-lite>=2.5.1",
    "numpy==1.26.4",
    "pymilvus>=2.6.8",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "setuptools==80.8.0",
    "transformers<5.0.0",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
]
