[project]
name = "py-demo"
version = "0.1.0"
description = "My python learning demo."
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]
