[project]
name = "py-pkg-demo"
version = "0.1.0"
description = "My python package demo."
readme = "README.md"
authors = [
    { name = "Zheng Jin", email = "zivieira@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mypy = "py_pkg_demo.cli:cli"
