[project]
name = "ui-automation-demo"
version = "0.1.0"
description = "My ui automation ai demo."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["uitests/cases"]
testpaths = ["uitests/cases"]
